--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -29,6 +29,7 @@
 <!-- END GLOBAL MANDATORY SCRIPTS -->
 
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
+<script src="/js/libs/jquery-play-sound.js"></script>
 <script src="/plugins/apex/apexcharts.min.js"></script>
 <script src="/js/dashboard/dash_1.js"></script>
 <script src="/plugins/select2/select2.min.js"></script>
