--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -86,59 +86,25 @@
       <li class="nav-item dropdown message-dropdown">
         <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="messageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-          <span class="badge badge-danger"></span>
+          <span class="badge badge-primary">0</span>
         </a>
-        <div class="dropdown-menu p-0 position-absolute" aria-labelledby="messageDropdown">
+        <div class="dropdown-menu p-0 position-absolute p-4" aria-labelledby="messageDropdown">
           <div class="">
+      <a><h6 class="dropdown-header">Messages</h6></a>
             <a class="dropdown-item">
-              <div class="">
-
-                <div class="media">
-                  <div class="user-img">
-                    <img class="usr-img rounded-circle" src="/images/90x90.jpg" alt="profile">
-                  </div>
-                  <div class="media-body">
-                    <div class="">
-                      <h5 class="usr-name">Kara Young</h5>
-                      <p class="msg-title">ACCOUNT UPDATE</p>
+              <div class="pt-2">
+                <div class="media notification-new">
+                  <div class="notification-icon">
+                    <div class="icon-svg mr-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                     </div>
                   </div>
-                </div>
-
-              </div>
-            </a>
-            <a class="dropdown-item">
-              <div class="">
-
-                <div class="media">
-                  <div class="user-img">
-                    <img class="usr-img rounded-circle" src="/images/90x90.jpg" alt="profile">
-                  </div>
                   <div class="media-body">
-                    <div class="">
-                      <h5 class="usr-name">Daisy Anderson</h5>
-                      <p class="msg-title">ACCOUNT UPDATE</p>
-                    </div>
+                    <p class="meta-title mr-3">1 new email</p>
+                    <p class="message-text">Anderson.Daisy@mail.com</p>
+                    <p class="meta-time align-self-center mb-0">Yesterday</p>
                   </div>
                 </div>
-
-              </div>
-            </a>
-            <a class="dropdown-item">
-              <div class="">
-
-                <div class="media">
-                  <div class="user-img">
-                    <img class="usr-img rounded-circle" src="/images/90x90.jpg" alt="profile">
-                  </div>
-                  <div class="media-body">
-                    <div class="">
-                      <h5 class="usr-name">Oscar Garner</h5>
-                      <p class="msg-title">ACCOUNT UPDATE</p>
-                    </div>
-                  </div>
-                </div>
-
               </div>
             </a>
           </div>
@@ -148,34 +114,40 @@
       <li class="nav-item dropdown notification-dropdown">
         <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="notificationDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-          <span class="badge badge-danger"></span>
+          <span class="badge badge-primary">0</span>
         </a>
         <div class="dropdown-menu position-absolute" aria-labelledby="notificationDropdown">
           <div class="notification-scroll">
+            <a><h6 class="dropdown-header">Notifications</h6></a>
 
             <div class="dropdown-item">
               <div class="media">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                 <div class="media-body">
-                  <div class="notification-para"><span class="user-name">Shaun Park</span> likes your photo.</div>
+                  <div class="notification-para"><span class="user-name">Shaun Park</span> commented on your post.</div>
+                  <div class="notification-meta-time">5 mins ago</div>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="dropdown-item">
+              <div class="media">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg>
+                <div class="media-body">
+                  <div class="notification-para"><span class="user-name">Kelly Young</span> likes your photo</div>
+                  <div class="notification-meta-time">8 mins ago</div>
                 </div>
               </div>
             </div>
 
             <div class="dropdown-item">
               <div class="media">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
                 <div class="media-body">
-                  <div class="notification-para"><span class="user-name">Kelly Young</span> shared your post</div>
-                </div>
-              </div>
-            </div>
-
-            <div class="dropdown-item">
-              <div class="media">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-tag"><path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"></path><line x1="7" y1="7" x2="7" y2="7"></line></svg>
-                <div class="media-body">
-                  <div class="notification-para"><span class="user-name">Kelly Young</span> mentioned you in comment.</div>
+                  <div class="notification-para">Invitation successfully sent to <span class="user-name">Amy Diaz</span></div>
+                  <div class="notification-meta-time">10 mins ago</div>
                 </div>
               </div>
             </div>
@@ -355,3 +327,4 @@
 
   </div>
   <!--  END SIDEBAR  -->
+
