--- a/public/light/styles/dashboard/dash_1.css
+++ b/public/light/styles/dashboard/dash_1.css
@@ -303,7 +303,9 @@
 .widget-table-one .widget-heading {
     display: flex;
 }
-.widget-table-one .widget-content {}
+.widget-table-one .widget-content {
+  height: 250px;
+}
 .widget-table-one .transactions-list {
     padding: 12px 12px;
     border: 1px dashed #bfc9d4;
@@ -436,7 +438,7 @@
     height: 8px;
     top: 5px;
     left: 5px;
-    transform: translateX(-50%); 
+    transform: translateX(-50%);
     border-color: #e0e6ed;
     background: #bfc9d4;
     z-index: 1;
@@ -536,7 +538,7 @@
     min-width: 80px;
     max-width: 80px;
     font-size: 13px;
-    font-weight: 600; 
+    font-weight: 600;
     color: #acb0c3;
     letter-spacing: 1px;
 }
@@ -790,7 +792,7 @@
     margin-left: 10px;
 }
 .widget-table-three .table > thead > tr > th:last-child .th-content {
-    text-align: right; 
+    text-align: right;
     margin-right: 10px;
 }
 .widget-table-three .table > thead > tr > th {
