--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -53,6 +53,9 @@
 <script src="/plugins/blockui/jquery.blockUI.min.js"></script>
 
 <script src="/plugins/blockui/custom-blockui.js"></script>
+
+<script src="/plugins/sweetalerts/sweetalert2.min.js"></script>
+<script src="/plugins/sweetalerts/custom-sweetalert.js"></script>
 <script>
   $("input[name='margin']").TouchSpin({
     postfix: '%',
