--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -24,15 +24,15 @@
     <link rel="stylesheet" href="/icons/css/all.css">
     <link rel="stylesheet" href="/light/styles/components/cards/card.css">
     <link rel="stylesheet" href="/light/styles/elements/alert.css">
-  <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
-  <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
-  <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
-  <link rel="stylesheet" type="text/css" href="/light/styles/forms/switches.css">
-  <link rel="stylesheet" href="/light/styles/override.css">
-  <link href="/light/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
-  <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
-  <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
-  <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
+    <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
+    <link rel="stylesheet" type="text/css" href="/light/styles/forms/switches.css">
+    <link rel="stylesheet" href="/light/styles/override.css">
+    <link href="/light/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
+    <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
+    <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
+    <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
@@ -153,7 +153,7 @@
         <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
           <div class="">
             <div class="dropdown-item">
-              <a class="" href="user_profile.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg> My Profile</a>
+              <a class="" href="/profile"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg> My Profile</a>
             </div>
             <div class="dropdown-item">
               <a class="" href="apps_mailbox.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-inbox"><polyline points="22 12 16 12 14 15 10 15 8 12 2 12"></polyline><path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"></path></svg> Inbox</a>
