--- a/resources/views/dashboard/buy.edge
+++ b/resources/views/dashboard/buy.edge
@@ -3,6 +3,10 @@
 <link rel="stylesheet" type="text/css" href="/plugins/table/datatable/custom_dt_miscellaneous.css">
 <link rel="stylesheet" type="text/css" href="/styles/forms/theme-checkbox-radio.css">
 <link rel="stylesheet" type="text/css" href="/plugins/table/datatable/dt-global_style.css">
+<script src="/light/plugins/sweetalerts/promise-polyfill.js"></script>
+<link href="/light/plugins/sweetalerts/sweetalert2.min.css" rel="stylesheet" type="text/css" />
+<link href="/light/plugins/sweetalerts/sweetalert.css" rel="stylesheet" type="text/css" />
+<link href="/light/styles/components/custom-sweetalert.css" rel="stylesheet" type="text/css" />
 <!--  BEGIN CONTENT AREA  -->
 <div id="content" class="main-content">
   <div class="layout-px-spacing">
