--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -34,10 +34,7 @@
   <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
   <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
 
-  <script src="/light/plugins/sweetalerts/promise-polyfill.js"></script>
-  <link href="/light/plugins/sweetalerts/sweetalert2.min.css" rel="stylesheet" type="text/css" />
-  <link href="/light/plugins/sweetalerts/sweetalert.css" rel="stylesheet" type="text/css" />
-  <link href="/light/styles/components/custom-sweetalert.css" rel="stylesheet" type="text/css" />
+
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
@@ -119,7 +116,11 @@
       <li class="nav-item dropdown notification-dropdown">
         <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="notificationDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-          <span class="badge badge-primary">{{notifications.length}}</span>
+          @if(notifications.length!==90)
+          <span class="badge badge-primary d-inline-block" style="font-size: 10px">{{notifications.length}}</span>
+          @else
+          <span class="badge badge-primary text-center" style="font-size: 10px">90+</span>
+          @endif
         </a>
         <div class="dropdown-menu position-absolute" aria-labelledby="notificationDropdown">
           <div class="notification-scroll">
