--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -34,6 +34,7 @@
 <script src="/js/dashboard/dash_1.js"></script>
 <script src="/plugins/select2/select2.min.js"></script>
 <script src="/plugins/select2/custom-select2.js"></script>
+<script src="/ratings/bootstrap-rating.js"></script>
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
 <script>$(".disabled-results").select2();</script>
 <script>$(".tagging").select2({
