--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/icons/css/all.css">
     <link rel="stylesheet" href="/light/styles/components/cards/card.css">
     <link rel="stylesheet" href="/light/styles/elements/alert.css">
-<<<<<<< HEAD
+
   <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
   <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
   <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
@@ -36,7 +36,7 @@
   <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
 
 
-=======
+
     <link rel="stylesheet" type="text/css" href="/light/plugins/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
     <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
@@ -46,7 +46,9 @@
     <link href="/light/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
     <link href="/light/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
     <link href="/light/styles/components/custom-countdown.css" rel="stylesheet" type="text/css">
->>>>>>> 3afa7a18f0fc2865060586311048e1042b162174
+  <link rel="stylesheet" href="/light/styles/bootstrap-rating.css">
+  <link rel="stylesheet" href="/icons/css/all.css">
+
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
